fix: fix unaligned logo

--- a/src/frontend/styles/components/aside.pcss
+++ b/src/frontend/styles/components/aside.pcss
@@ -69,6 +69,10 @@
     display: flex;
     align-items: center;
     gap: 18px;
+
+    .logo {
+      display: inline-flex;
+    }
   }
 }
 
